# intset-compare

./: .gitignore  Makefile  README.md  bench.json  intset-compare.cabal  plot.py
bench/: Bench.hs
bench-ffi/: Bench.hs
src-c/: intset.c
src/Data/IntSet/: FFI.hs  GHC.hs  Native.hs  NativeDiv.hs  NativeUS.hs
src/Data/IntSet/FFI/: C.hs
test-ffi/: TestIntSet.hs
