name:           intset-compare
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/hverr/intset-compare#readme>
homepage:       https://github.com/hverr/intset-compare#readme
bug-reports:    https://github.com/hverr/intset-compare/issues
author:         Henri Verroken
maintainer:     henriverroken@gmail.com
copyright:      2018 Henri Verroken
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/hverr/intset-compare

library
  hs-source-dirs:       src
  exposed-modules:      Data.IntSet.FFI
                      , Data.IntSet.FFI.C
                      , Data.IntSet.Native
  build-depends:        base >=4.7 && <5
                      , containers
                      , primitive
  default-language:     Haskell2010
  ghc-options:          -Wall
  c-sources:            src-c/intset.c

test-suite intset-ffi-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test-ffi
  main-is:              TestIntSet.hs
  build-depends:        base
                      , intset-compare
                      , primitive
                      , random
                      , unordered-containers
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

benchmark intset-ffi-bench
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench-ffi
  main-is:              Bench.hs
  build-depends:        base
                      , intset-compare
                      , containers
                      , criterion
                      , mtl
                      , random
                      , unordered-containers
                      , vector
  ghc-options:          -Wall
  default-language:     Haskell2010
